php cs fix with laravel/pint

--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
       "name": "mrazinshaikh",
       "email": "razinshakh8732@gmail.com"
     }
-  ]
+  ],
+  "require-dev": {
+    "laravel/pint": "^1.16"
+  }
 }
