--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
   "require-dev": {
     "laravel/pint": "^1.16"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
